[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["adios <eremeevvv72@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
